add the stats note

--- a/docs/00_基礎知識.markdown
+++ b/docs/00_基礎知識.markdown
@@ -1,3 +1,58 @@
+
+
+極限：
+
+
+微分：
+
+積分：
+
+定義：常数存在、
+n>N　
+任意の$\epsilon$
+$|x_n- a| < \epsilon$
+
+aは極限
+
+存在しない場合は
+
+
+$\dfrac{\infty}{\infty}$ 型
+
+
+
+テイラー展開：
+
+$$
+f(x) =f(x_{0}) + f'(x_{0}) (x-x_{0}) + \frac{1}{2!} f''(x_{0}) (x-x_{0})^2  + \frac{1}{3!} f'''(x_{0}) (x-x_{0})^3 + \cdots
+$$
+
+
+マクローリン展開：
+
+$$
+f(x)= f(0) +f'(0)x+\frac{1}{2!} f''(0)x^2 +\frac{1}{3!} f'''(0)x^3+\cdots
+$$
+
+
+
+
+母関数：数学において、母関数（生成関数）は数列に関する情報を内包した係数を持つ、形式的冪級数である。母関数は、一般線型回帰問題の解決のために用いられた。
+
+
+なぜ母関数を導入するのか？
+確率母関数や積率母関数を使えば、モーメントが簡単に求められます。平均や分散は比較的容易に求められます。
+
+
+
+無限大
+
+多項式 ≪ 指数関数
+
+多項式は> 対数関数
+
+
+
 # 基礎知識
 
 ## 極限
@@ -50,25 +105,7 @@ n次導関数：
 
 
 
-テイラー展開：
 
-$$
-f(x) =f(x_{0}) + f'(x_{0}) (x-x_{0}) + \frac{1}{2!} f''(x_{0}) (x-x_{0})^2  + \frac{1}{3!} f'''(x_{0}) (x-x_{0})^3 + \cdots
-$$
-
-
-マクローリン展開：
-
-$$
-f(x)= f(0) +f'(0)x+\frac{1}{2!} f''(0)x^2 +\frac{1}{3!} f'''(0)x^3+\cdots
-$$
-
-
-母関数：数学において、母関数（生成関数）は数列に関する情報を内包した係数を持つ、形式的冪級数である。母関数は、一般線型回帰問題の解決のために用いられた。
-
-
-なぜ母関数を導入するのか？
-確率母関数や積率母関数を使えば、モーメントが簡単に求められます。平均や分散は比較的容易に求められます。
 
 
 
