Add toukei note

--- a/docs/02_確率分布と期待値.markdown
+++ b/docs/02_確率分布と期待値.markdown
@@ -41,24 +41,62 @@ $Var(X)=E[X^2]-\{E[X]\}^2$
 
 **確率関数のモーメント**：$E[X^k]$
 
-**確率母関数**：確率変数Xの標本空間を非負の整数全体 $X={0,1,2...}$ とし $|s| \le 1$ となるsに対して、$G_X(s)=E[s^X]=\sum_{k=0}^{\infty}s^kp(k)$ を確率母関数といい。
+**確率母関数**：$G_X(s)=E[s^X]=\sum_{k=0}^{\infty}s^kp(k)$
+
+$G_X(s)=\int{s^x}f(x)dx$
+
+**積率（モーメント）母関数**：　$M_X(t)=E[e^{tX}]$
+
+$M_X(t)=\int{e^{tx}}f(x)dx$
+
+$M_X(t)=G_X(e^t)$
+
+**特性関数**: $\phi_X(t)=E[e^{itX}]$
+
+$\phi_X(t)=M_X(it)=G_X(e^{it})$
 
 母関数という名前は、$G_X(s)$ から p(k)を生成することができるから。
 
-性質：
 
 $p(k)=\frac{1}{k!}G_X^{(k)}(0)$
 
 $E[X(X-1)...(X-k+1)]=G_X^{(k)}(1)$
 
 
-**積率（モーメント）母関数**：　$M_X(t)=E[e^{tX}]$
-
-$M_X(t)=G_X(e^t)$
-
 積率母関数という名前は、$M_X(t)$から積率を生成することができるから。
 
 $E[X^k]=M_X^{(k)}(0)$
+
+
+
+
+$exp{ia}=\cos(a)+i\sin(a)$
+
+$M_X(t)=G_X(e^t)$
+
+
+
+$$
+E[X^k]=M_X^{(k)}(0)=\frac{1}{i^k}\phi_X^{(k)}(0)
+$$
+
+Xが連続型確率変数、
+
+$f_X(x)=\frac{1}{2\pi}\int_{-\infty}^{\infty}e^{-itx}\phi_X(t)dt$
+
+が成り立つ。これはフーリエの逆変換として知られている。
+
+特性関数と確率分布が１対１に対応することを示している。
+連続性定理。
+
+
+確率変数の列{X_k}　$X_k$の特性関数 $\phi_{X_k}(t)$
+
+$\lim_{k \rightarrow \infity}\phi_{X_k}(t)=\phi_X(t)$　となる特性関数\phi_X(t)　に収束すると仮定する。この時\phi_X(t)に対応する分布関数を F_X(x)とすると、F_X(x)のすべての連続点xで、
+
+$\lim_{k \rightarrow \infity F_{X_k}(x)=F_X(x)}$ が成り立つ。
+
+すなわち、X_kの分布はX_kの特性関数の極限に対応する分布に収束することがわかる。
 
 
 **確率変数の変換**：確率変数XをY=g(X)に変換した時Yの分布をXの分布から導くことを考えます。
@@ -69,6 +107,7 @@ $f_Y(y)=f_X(g^{-1}(y))\frac{1}{g'(g^{-1}(y))}$
 
 
 確率母関数：　$$G_X(s)=E[s^X]=\sum_{k=0}^{\infty}s^kp(k)$$
+
 
 $$p(k)=\frac{1}{k!}G_X^{(k)}(0)$$
 
@@ -95,3 +134,7 @@ $$\phi_X(t)=E[e^{itX}]=E[\cos(tX)+i\sin(tX)]$$
 
 
 M_X(t)がt=0の周辺開区間で存在する場合、それが確率分布のモーメントの母関数になっていることに由来しています。
+
+
+
+[積率母関数とは？モーメントの求め方も解説](https://to-kei.net/basic/glossary/moment-generating-function/)
