--- a/docs/03_代表的な確率分布.markdown
+++ b/docs/03_代表的な確率分布.markdown
@@ -1,42 +1,221 @@
+
+## 離散分布
+
+### 離散一様分布
+
+$P(X=x|N)= \frac{1}{N}, x=1,2 \cdots, N$
+
+### ベルヌーイ分布
+
+$P(X=x|p)=$
+
+### 二項分布
+
+n回ベルヌーイ試行、成功する回数
+
+
+$Bin(n, p) = P_{n,p}(k)={}_n\mathrm{C}_kp^k(1-p)^{n-k}$
+
+$E(X) = np$
+
+$Var(X)=p(1-p)$
+
+
+
+### ポアソン分布
+
+稀な現象の大量観測、によって、稀な現象が起こる回数のをXで表し、Xの確率関数が：
+
+$P(X=k| \lambda)=\frac{\lambda^k}{k!}e^{-\lambda}, k=0,1,2,\cdots,$
+
+$\lambda$ は稀な現象の平均値、強度といい。
+
+$E(X)=Var(X)=\lambda$
+
+
+Bin(n,p), np=\lambda のともで n->\infity p -> 0　とすると　Bin(n, p)は Po(\lambda)に収束する。
+
+
+
+### 幾何分布
+
+成功確率pのベルヌーイ試行を独立に行っていき、初めて成功するまでに要した失敗の回数をXとするとき、Xの分布が幾何分布となる。
+
+無記憶性。
+
+
+$P(X=k|p)=p(1-p)^k$
+
+$E[X]=q/p$
+
+$Var[X]=q/p^2$
+
+### 負の二項分布
+
+成功確率pのベルヌーイ試行を独立に行っていき、r回成功するまでに要した失敗の回数をxで表示する時、Xの分布が負の二項分布となる。
+
+$P(X=k|p, r)= (r+k-1 k)p^rq^k$
+
+$E[X]=rq/p$
+
+$Var[X]=rq/p^2$
+
+$G_x(s)=p^r/(1-sq)^r$
+
+### 超幾何分布
+
+
+## 連続分布
+
 ### 連続一様分布
 
-$f_X(x|a,b)=1/(b-a)　 (a \le X \le bの場合)$　
+$f_X(x|a,b)=\frac{1}{(b-a)}　 (a \le X \le bの場合)$　
 
 ### 正規分布
 
-$F(x)=\frac{1}{\sqrt{2\pi \sigma^2}}\int_{-\infty}^{\infty}\exp{\left\{-\frac{(x-\mu)^2}{2\sigma^2}\right\}}\ \mathrm{d}x$
+確率変数Xが平均 $\mu$  分散 $\sigma^2$　の正規分布に従うとは、Xの確率密度関数が：
+
+$f_X(x)=\frac{1}{\sqrt{2\pi \sigma^2}}\exp{\left\{-\frac{(x-\mu)^2}{2\sigma^2}\right\}}, -\infty<x<\infty$
+
+標準化変換：　$Z=(X-\mu)/\sigma$
+
+$F_X(x)=\frac{1}{\sqrt{2\pi \sigma^2}}\int_{-\infty}^{\infty}\exp{\left\{-\frac{(x-\mu)^2}{2\sigma^2}\right\}}\ \mathrm{d}x$
 
 
 ### 指数分布
 
-確率密度関数：$f_X(x|\lambda)=\lambda e^{-\lambda x}, x>0$<br>分布関数： $F_X(x)=P(X<x)=1-e^{-\lambda x}$　
 
-起こる確率が常に一定である
-生存の時間の分布として用いられることがある。
-無記憶性： $P(X \ge s+t | X \ge s)=P(X \ge t)$
+確率密度関数：$f_X(x|\lambda)=\lambda e^{-\lambda x}, x>0$
+分布関数： $F_X(x)=P(X<x)=1-e^{-\lambda x}$
 
-ハザード関数：
+$E[X]=\frac{1}{\lambda}$
+
+$Var[X]=\frac{1}{\lambda^2}$
+
+指数分布は生存時間の分布として用いられることがある。P(X>s)は時間sを超えて生存する確率を表しており。 $P(X>s)=e^{-\lambda s}$
+
+$P(X \ge s+t | X \ge s)=e^{-\lambda t}=P(X \ge t)$
+
+**ハザード関数**：（故障の確率）$\lambda(x)=\frac{f(x)}{1-F(x)}$
+
+指数分布を離れて、x時間まで動作していて次の時間x+\Delta までに故障する条件付き確率は：
+$P(x<X \le x+\Delta)=\frac{F(x+\Delta)-F(x)}{1-F(x)}$
+
+これはハザード関数という。
+
+$F(x)=1-exp\{-\int_0^x\lambda(t)dt\}$
+
+$f(x)=\lambda(x)exp\{-\int_0^x\lambda(t)dt\}$
+
+??
+
+
+指数分布において、常に$lambda(x)=\lambda$　xには無関係になる。
+
+
+
+**ワイブル分布**： 時間をけいかとともに故障しやすくなる場合や、故障しなくなる場合には $\lambda(x)=abx^{b-1}$ なるハザード関数が考えられる。
+
+$f(x|a,b)=abx^{b-1}exp\{-ax^b\}$
+
 
 ### ガンマ分布
-
-ガンマ分布は，期間 μ ごとに1回くらい起こるランダムな事象が n 回起こるまでの時間の分布を表します（理由は後述）。
 
 $f_X(x|\alpha, \beta)=\frac{1}{\Gamma(\alpha)}\frac{1}{\beta}(\frac{x}{\beta})^{\alpha-1}e^{-x/\beta}, x > 0$
 
 ガマン関数　$\Gamma(\alpha)=\int_0^{\infty}y^{\alpha-1}e^{-y}dy$
 
-カイ2乗分布 | 　 |
-ベータ分布 | $f_X(x|a,b)=\frac{1}{B(a,b)}x^{\alpha-1}(1-x)^{b-1}$　 |　ベータ関数  $B(x,y)=\int_0^1 t^{x-1}(1-t)^{y-1} dx$
+$\alpha$ は形状係数、$\beta$ は尺度係数と呼ばれ。
+
+尺度変換 $Y=X/\beta$を行うと、
+
+$f_Y(y|\alpha)=\frac{1}{\Gamma(\alpha)}y^{\alpha-1}e^{-y}, y>0$
+
+$E[Y]=\alpha$
+
+$Var(Y)=\alpha$
+
+$M_Y(t)=E[e^{tY}]=(1-t)^{-\alpha}$
+
+なので、 $E[X]=\alpha\beta$, $Var(X)=\alpha\beta^2$
+
+
+ガンマ分布は，期間 $\beta$ ごとに1回くらい起こるランダムな事象が $\alpha$ 回起こるまでの時間の分布を表します。
+
+主に信頼性工学における電子部品の寿命分布や通信工学におけるトラフィックの待ち時間分布に応用される。
+
+指数分布は期間 $\beta$ ごとに1回くらい起こるランダムな事象が 1 回起こるまでの時間の分布を表す。
+
+$X_1,X_2,\cdots,X_{\alpha}$ が互いに独立に平均 $\beta$ の指数分布に従うとき，
+$Y=X_1+X_2+\cdots +X_{\alpha}$ はパラメータが $\beta$ と $\alpha$ のガンマ分布に従う。
+
+#### その他
+
+$\Gamma(1/2)=\sqrt{\pi}, \Gamma(1)=1$
+
+$\Gamma(\alpha+1)=\alpha\Gamma{\alpha}$
+
+$\Gamma(n)=(n-1)!$　nが自然数の時
+
+
+階乗の一般化
+
+### カイ2乗分布
+
+nを自然数とする、確率変数Xの確率密度関数が：
+
+$f_X(x)=\frac{1}{\Gamma(n/2)}(\frac{1}{2})^{n/2}x^{n/2-1}exp\{-x/2\}$
+
+で与えられるとき、自由度nのカイ二乗分布といい、$\chi_n^2$ で表す。
+
+$Ga(n/2, 2)$
+
+$E[\chi_n^2]=n$
+
+$Var(\chi_n^2)=2n$
+
+確率変数Zが $N(0,1)$ に従うとき、$Z^2$ が $\chi_1^2$ に従う。
+
+
+確率変数 $X_1,X_2,\cdots,X_n$ が互いに独立に標準正規分布 N(0,1) に従うとき，
+$X=X_1^2+X_2^2+\cdots +X_n^2$ は自由度 n のカイ二乗分布に従う。
+
+
+### ベータ分布
+
+区間[0,1]上の確率分布であり。
+
+$f_X(x|a,b)=\frac{1}{B(a,b)}x^{\alpha-1}(1-x)^{b-1}$
+
+ベータ関数  $B(x,y)=\int_0^1 t^{x-1}(1-t)^{y-1} dx$
+
+$B(a,b)=\Gamma(a)\Gamma(b)/\Gamma(a+b)$
+
+$E[X]=\dfrac{a}{a+b}$
+
+$V[X]=\dfrac{ab}{(a+b)^2(a+b+1)}$
+
+
+コイン投げにおける表が出る確率の予測分布。
+表が出る確率xが不明であるコインを何回か投げて、表がm回、裏がn回出たとします、この時「表が出る確率の予測値」は、パラメータが $(a,b)=(m+1, n+1)$であるベータ分布に従うと考えることができます.
+
+より正確に言うと，事前分布を一様分布とし，尤度が二項分布（コイン投げ）であるときの事後分析がベータ分布になります。
+
+
+
+
+
 コーシー分布 | 　 |
 対数正規分布 | 　 |
 ワイブル分布 | 　 |
 ロジスティック分布 | 　 |
 多変量正規分布 | 　 |
 
-正規分布、どこから来たのか？　中心極限定理からかもしれません。
 
-ガマン分布：
 
-カイ二乗分布：
+# 参考資料
 
-標本に対する確率分布
+[ガンマ分布の意味と期待値、分散](https://mathtrain.jp/gammadist)
+
+
+[正規分布の二乗和がカイ二乗分布に従うことの証明](https://mathtrain.jp/chisquare)
