--- a/docs/05_標本分布とその近似.markdown
+++ b/docs/05_標本分布とその近似.markdown
@@ -15,21 +15,71 @@
 
 互いに独立に同一分布に従う
 
-母平均
-母分散
+**母平均**
+**母分散**
 
-標本平均：　$\bar X=\frac{1}{n}\sum_{i=1}^{n}X_i$
+**標本平均**：　$\bar X=\frac{1}{n}\sum_{i=1}^{n}X_i$
 
-標本分散： $S^2=\frac{1}{n}\sum_{i=1}^{n}(X_i-\bar X)^2$
+**標本分散**： $S^2=\frac{1}{n}\sum_{i=1}^{n}(X_i-\bar X)^2$
 
-統計量
-標本分布
+**統計量**：$\bar X$, $S^2$
 
 
-不偏分散
+**標本分布(samping distribution)**：統計量の分布
+
+$\bar X$の平均と分散は計算できるが、その確率分布を求めることは困難である。
+
+
+$E[\bar X]=\mu$
+
+$Var[\bar X]=\frac{\sigma}{n}$
+
+
+
+$E[S^2]={(n-1)/n}\sigma^2$
+
+**不偏分散**: $V^2=\frac{1}{n-1}\sum_{i=1}^n(X_i-\bar X)^2$
+
+の期待値が　$\sigma^2$となる。これを不偏分散という。
+
 
 正規母集団からの代表的な標本分布
 
+
+
+定理：
+
+正規母集団から
+$X_1, X_n$をランダムサンプルとする
+
+$\bar X$, $V^2$は独立に分布する
+
+$\bar X ~ N(\mu, \sigma^2 / n)$
+
+$(n-1)V^2/\sigma^2~ X^2_{n-1}$
+
+
+
+- t-分布
+- F-分布
+- カイ二乗分布
+
+**t-分布**:
+
+確率変数　$Z=\sqrt{n}(\bar X - \mu)/\sigma$　は標準正規分布　$N(0,1)$に従う。
+
+\sigma　の代わりにVを代入した確率変数
+
+$T=\sqrt{n}(\bar X - \mu)/V$ より裾厚い分布になっている。
+
+$U=(n-1)V^2/\sigma^2$, $U  \chi_m^2$
+
+$T=Z/\sqrt{U/(n-1)}$
+
+ZとUを独立な確率変数とし、$Z \sim N(0,1), U \sim \chi_m^2$とするとき、
+
+$T=Z/\sqrt{(U/m)}$
+は自由度mのスチューデントのt分布に従うといい
 
 
 
