--- a/docs/02_確率分布と期待値.markdown
+++ b/docs/02_確率分布と期待値.markdown
@@ -1,41 +1,42 @@
 
 
-## 定義と定理
+## 定義と定理(What)
 
 **確率**:　試行の確からしさを数学的に記述したもの。
 
 数学的に、可測集合Aに対して、実数を対応させる関数 $P(.)$ で、次のみつの性質を満たすものを確率という：
- (1)すべての $A \in B$ に対して $P(A) \ge 0$
- (2) $P(\Omega)=1$
- (3) $A_k \in B$ が互いに排反であるとき、 $P(\bigcup^\infty_{k=1}A_k)=\sum_{n=1}^\infty P(A_k)$ が成り立つ
 
+- (1)すべての $A \in B$ に対して $P(A) \ge 0$
+- (2) $P(\Omega)=1$
+- (3) $A_k \in B$ が互いに排反であるとき、 $P(\bigcup^\infty_{k=1}A_k)=\sum_{n=1}^\infty P(A_k)$ が成り立つ
 
-**確率変数**: 例：3回振ったサイコロの目の和
+**確率変数**：事項を実数値で表示すること。例：3回振ったサイコロの目の和
 
-**確率（累積）分布関数**
+**確率（累積）分布関数**：$F_X(x)=P(X \le x)$
 
 確率変数$X$が$x$以下の値となる確率を$x$の関数とみたものを分布関数といい。
 
- $F_X(x)=P(X \le x)$
-
  確率（累積）分布関数になるための必要十分条件:
- (1) $lim_{-\infty}F(x)=0,lim_{\infty}F(x)=1$
- (2) F(x)はxの非減少関数である<br>(3) F(x)は右連続関数である
 
-**確率（密度）関数**: 離散変数のとる各値に対し、その確率を**確率関数**といい 連続変数の場合に分布関数の微分を**確率密度関数**といい。
- $f_X(x)=P(X=x)$ $=\int_{-\infty}^{\infty}f_X(t)dt$
+- (1) $lim_{-\infty}F(x)=0,lim_{\infty}F(x)=1$
+- (2) F(x)はxの非減少関数である
+- (3) F(x)は右連続関数である
+
+**確率（密度）関数**：$f_X(x)=P(X=x)$ $=\int_{-\infty}^{\infty}f_X(t)dt$
+
+離散変数のとる各値に対し、その確率を**確率関数**といい 連続変数の場合に分布関数の微分を**確率密度関数**といい。
 
 **関数g(X)の期待値**： $E[g(X)]=\int_{-\infty}^{\infty}g(x)f_X(x)dx$
 
-関数$g(X)=X$の期待値はXの平均値といい。
+**平均値**：関数$g(X)=X$の期待値はXの平均値といい。
 
 Xの平均値：$\mu=E[X]=\int_{-\infty}^{\infty}xf_X(x)dx$
 
-**分散**： $V=E[(X-\mu)^2]$
+**分散**： $V=E[(X-\mu)^2]$、$(X-\mu)^2$ の期待値は分散といい
 
 $Var(X)=E[X^2]-\{E[X]\}^2$
 
-**標準偏差**：$\sigma=\sqrt{Var(X)}$
+**標準偏差**：$\sigma=\sqrt{Var(X)}$, i.e. $Var(x)=\sigma^2$
 
 **基準化、標準化**：$Z=(X-\mu)/\sigma$
 
@@ -53,10 +54,50 @@ $M_X(t)=G_X(e^t)$
 
 **特性関数**: $\phi_X(t)=E[e^{itX}]$
 
+$\phi_X(t)=\int{e^{itx}}f(x)dx$
+
 $\phi_X(t)=M_X(it)=G_X(e^{it})$
 
 母関数という名前は、$G_X(s)$ から p(k)を生成することができるから。
 
+**確率変数の変換**：確率変数XをY=g(X)に変換した時Yの分布をXの分布から導くことを考えます。
+
+$f_Y(y)=f_X(g^{-1}(y))\frac{1}{g'(g^{-1}(y))}$
+
+
+
+## Why
+
+
+
+## 用途　How
+
+**定理：特性関数と確率分布が１対１に対応すること**：$F_X(x)$の連続点 a,b(a<b)に対して、
+
+$P(a<X<b)= \lim_{T \rightarrow \infty} \frac{1}{2\pi}\int_{-T}^T \frac{e^{-ita}-e^{-itb}}{it}\phi_X(t)dt$
+
+が成り立つ。
+
+つまり、二つの確率変数XとYの特性関数 $\phi_X(t)$ と　$\phi_Y(t)$ に対して,
+$\phi_X(t)=\phi_Y(t)$ がすべてのtで成り立つとき、すべての uに対して、$F_X(u)=F_Y(u)$　が成り立つ。
+
+$\int_{-\infty}^{\infty}\phi_X(t)dt < \infty$ とき、
+
+$f_X(x)=\frac{1}{2\pi}\int_{-\infty}^{\infty} e^{-itx}\phi_X(t)dt$ が成り立つ。
+
+
+
+
+
+**定理**：確率変数の列の特性関数の極限\phi_X(t)に収束する時、この時
+Fx(x)のすべての連続点xで
+
+$lim_{k \rightarrow \infty}F_{X_k}(x)=F_{X}(x)$ が成り立つ。
+
+特性関数収束する時分布関数収束。
+
+
+f_Y(y)=f_X(g^-1(y))\frac{1}{g'(g^{-1}(y))}
 
 $p(k)=\frac{1}{k!}G_X^{(k)}(0)$
 
@@ -97,12 +138,6 @@ $\lim_{k \rightarrow \infity}\phi_{X_k}(t)=\phi_X(t)$　となる特性関数\ph
 $\lim_{k \rightarrow \infity F_{X_k}(x)=F_X(x)}$ が成り立つ。
 
 すなわち、X_kの分布はX_kの特性関数の極限に対応する分布に収束することがわかる。
-
-
-**確率変数の変換**：確率変数XをY=g(X)に変換した時Yの分布をXの分布から導くことを考えます。
-
-$f_Y(y)=f_X(g^{-1}(y))\frac{1}{g'(g^{-1}(y))}$
-
 
 
 
