--- a/docs/03_代表的な確率分布.markdown
+++ b/docs/03_代表的な確率分布.markdown
@@ -3,64 +3,106 @@
 
 ### 離散一様分布
 
-$P(X=x|N)= \frac{1}{N}, x=1,2 \cdots, N$
+確率関数：$P(X=x|N)= \frac{1}{N}, x=1,2 \cdots, N$
 
-### ベルヌーイ分布
+平均： $\frac{(1+n)}{2}$
 
-$P(X=x|p)=$
+分散： $\frac{(n-1)(n+1)}{12}$
+
 
 ### 二項分布
 
-n回ベルヌーイ試行、成功する回数
+確率関数：$Bin(n, p) = P_{n,p}(k)={}_n\mathrm{C}_kp^k(1-p)^{n-k}$
 
+説明：n回ベルヌーイ試行、成功する回数
 
-$Bin(n, p) = P_{n,p}(k)={}_n\mathrm{C}_kp^k(1-p)^{n-k}$
+確率母関数：$G_X(t)=(ps+1-p)^n$
 
-$E(X) = np$
+積率母関数：$M_X(t)=(pe^t+1-p)^n$
 
-$Var(X)=p(1-p)$
+特性関数：$\phi_X(t)=(pe^{it}+1-p)^n$
 
+平均：$E(X) = np$
+
+分散：$Var(X)=p(1-p)$
+
+#### 相関計算
+
+**二項定理** を用いて、簡単に計算できます：
+
+$(a+b)^n=\sum_{k=0}^{n}{}_n\mathrm{C}_ka^kb^{n-k}$
+
+**ベルヌーイ分布**：$P(X=x|p)=$
 
 
 ### ポアソン分布
 
-稀な現象の大量観測、によって、稀な現象が起こる回数のをXで表し、Xの確率関数が：
+確率関数：$P(X=k| \lambda)=\frac{\lambda^k}{k!}e^{-\lambda}, k=0,1,2,\cdots,$
 
-$P(X=k| \lambda)=\frac{\lambda^k}{k!}e^{-\lambda}, k=0,1,2,\cdots,$
+説明：稀な現象の大量観測、によって、稀な現象が起こる回数のをXで表す。$\lambda$ は稀な現象の平均値、強度といい。
 
-$\lambda$ は稀な現象の平均値、強度といい。
+平均と分散：$E(X)=Var(X)=\lambda$
 
-$E(X)=Var(X)=\lambda$
+確率母関数：$G_X(s)=e^{(s-1)\lambda}$
 
+積率母関数：$M_X(s)=exp\{(e^t-1)\lambda\}$
 
-Bin(n,p), np=\lambda のともで n->\infity p -> 0　とすると　Bin(n, p)は Po(\lambda)に収束する。
+特性関数：$\phi_X(s)=exp\{(e^{it}-1)\lambda\}$
 
+#### 相関計算
 
+マクローリン展開から：
+
+$e^{a}=\sum_{t=0}^{\infty}\frac{a^t}{t!}$
+
+その他：
+
+$n \rightarrow \infty p \rightarrow 0$ のとき、二項分布はポアソン分布に収束する。
+
+証明：特性関数の極限が一緒。
 
 ### 幾何分布
 
-成功確率pのベルヌーイ試行を独立に行っていき、初めて成功するまでに要した失敗の回数をXとするとき、Xの分布が幾何分布となる。
+確率分布関数：$P(X=k|p)=p(1-p)^k$
+
+説明：成功確率pのベルヌーイ試行を独立に行っていき、初めて成功するまでに要した失敗の回数をXとするとき、Xの分布が幾何分布となる。
+
+平均：$E[X]=q/p$
+
+分散：$Var[X]=q/p^2$
+
+確率母関数：
+
+積率母関数：
+
+特性関数：
+
+#### 相関計算
+
+等比数列の和
 
 無記憶性。
 
-
-$P(X=k|p)=p(1-p)^k$
-
-$E[X]=q/p$
-
-$Var[X]=q/p^2$
-
 ### 負の二項分布
 
-成功確率pのベルヌーイ試行を独立に行っていき、r回成功するまでに要した失敗の回数をxで表示する時、Xの分布が負の二項分布となる。
+確率分布関数：$P(X=k|p, r)= (r+k-1 k)p^rq^k$
 
-$P(X=k|p, r)= (r+k-1 k)p^rq^k$
+説明：成功確率pのベルヌーイ試行を独立に行っていき、r回成功するまでに要した失敗の回数をxで表示する時、Xの分布が負の二項分布となる。
 
-$E[X]=rq/p$
+平均：$E[X]=rq/p$
 
-$Var[X]=rq/p^2$
+分散：$Var[X]=rq/p^2$
 
-$G_x(s)=p^r/(1-sq)^r$
+確率母関数：$G_x(s)=p^r/(1-sq)^r$
+
+積率母関数：
+
+特性関数：
+
+#### 相関計算
+
+
+
 
 ### 超幾何分布
 
@@ -75,22 +117,48 @@ $f_X(x|a,b)=\frac{1}{(b-a)}　 (a \le X \le bの場合)$　
 
 確率変数Xが平均 $\mu$  分散 $\sigma^2$　の正規分布に従うとは、Xの確率密度関数が：
 
-$f_X(x)=\frac{1}{\sqrt{2\pi \sigma^2}}\exp{\left\{-\frac{(x-\mu)^2}{2\sigma^2}\right\}}, -\infty<x<\infty$
+$f_X(x|\mu, \sigma^2)=\frac{1}{\sqrt{2\pi \sigma^2}}\exp{\left\{-\frac{(x-\mu)^2}{2\sigma^2}\right\}}, -\infty<x<\infty$
 
 標準化変換：　$Z=(X-\mu)/\sigma$
 
+標準正規分布：$\phi_(z)=\frac{1}{\sqrt{2\pi}}exp\{-\frac{z^2}{2}\}$
+
 $F_X(x)=\frac{1}{\sqrt{2\pi \sigma^2}}\int_{-\infty}^{\infty}\exp{\left\{-\frac{(x-\mu)^2}{2\sigma^2}\right\}}\ \mathrm{d}x$
+
+確率母関数：
+
+積率母関数：
+
+特性関数：
+
+
+相関計算：
+
+$\int_{-\infty}^{\infty}exp\{-\frac{z^2}{2}\}dz=\sqrt{2\pi}$
+
+ガウス積分：
+
+$\displaystyle\int_{-\infty}^{\infty}e^{-ax^2}dx=\sqrt{\dfrac{\pi}{a}}$
+
+正規分布の変数変換
 
 
 ### 指数分布
 
 
 確率密度関数：$f_X(x|\lambda)=\lambda e^{-\lambda x}, x>0$
+
 分布関数： $F_X(x)=P(X<x)=1-e^{-\lambda x}$
 
-$E[X]=\frac{1}{\lambda}$
+平均：$E[X]=\frac{1}{\lambda}$
 
-$Var[X]=\frac{1}{\lambda^2}$
+分散：$Var[X]=\frac{1}{\lambda^2}$
+
+確率母関数：
+
+積率母関数：
+
+特性関数：
 
 指数分布は生存時間の分布として用いられることがある。P(X>s)は時間sを超えて生存する確率を表しており。 $P(X>s)=e^{-\lambda s}$
 
@@ -107,11 +175,7 @@ $F(x)=1-exp\{-\int_0^x\lambda(t)dt\}$
 
 $f(x)=\lambda(x)exp\{-\int_0^x\lambda(t)dt\}$
 
-??
-
-
 指数分布において、常に$lambda(x)=\lambda$　xには無関係になる。
-
 
 
 **ワイブル分布**： 時間をけいかとともに故障しやすくなる場合や、故障しなくなる場合には $\lambda(x)=abx^{b-1}$ なるハザード関数が考えられる。
@@ -187,15 +251,13 @@ $X=X_1^2+X_2^2+\cdots +X_n^2$ は自由度 n のカイ二乗分布に従う。
 
 $f_X(x|a,b)=\frac{1}{B(a,b)}x^{\alpha-1}(1-x)^{b-1}$
 
-ベータ関数  $B(x,y)=\int_0^1 t^{x-1}(1-t)^{y-1} dx$
+ベータ関数
 
+$B(x,y)=\int_0^1 t^{x-1}(1-t)^{y-1} dx$
 $B(a,b)=\Gamma(a)\Gamma(b)/\Gamma(a+b)$
 
-$E[X]=\dfrac{a}{a+b}$
 
-$V[X]=\dfrac{ab}{(a+b)^2(a+b+1)}$
-
-
+説明：
 コイン投げにおける表が出る確率の予測分布。
 表が出る確率xが不明であるコインを何回か投げて、表がm回、裏がn回出たとします、この時「表が出る確率の予測値」は、パラメータが $(a,b)=(m+1, n+1)$であるベータ分布に従うと考えることができます.
 
@@ -203,13 +265,19 @@ $V[X]=\dfrac{ab}{(a+b)^2(a+b+1)}$
 
 
 
+平均：$E[X]=\dfrac{a}{a+b}$
+
+分散：$V[X]=\dfrac{ab}{(a+b)^2(a+b+1)}$
 
 
-コーシー分布 | 　 |
-対数正規分布 | 　 |
-ワイブル分布 | 　 |
-ロジスティック分布 | 　 |
-多変量正規分布 | 　 |
+確率母関数：
+
+積率母関数：
+
+特性関数：
+
+
+
 
 
 
