--- a/docs/03_代表的な確率分布.markdown
+++ b/docs/03_代表的な確率分布.markdown
@@ -238,6 +238,8 @@ $E[\chi_n^2]=n$
 
 $Var(\chi_n^2)=2n$
 
+$M_X(t)={(\frac{1}{1- 2t})}^{\frac{k}{2}}$
+
 確率変数Zが $N(0,1)$ に従うとき、$Z^2$ が $\chi_1^2$ に従う。
 
 
