--- a/docs/05_標本分布とその近似.markdown
+++ b/docs/05_標本分布とその近似.markdown
@@ -27,13 +27,13 @@ $Var[X_i]=\sigma^2$
 
 **母平均、母分散**：母集団の平均と分散、　$\mu$ 、$\sigma^2$
 
-**標本平均、標本分散**：　標本に基づいて計算した平均と分散。
+**標本平均、標本分散**：　標本確率変数の平均と分散。
 
 $\bar X=\frac{1}{n}\sum_{i=1}^{n}X_i$
 
 $S^2=\frac{1}{n}\sum_{i=1}^{n}(X_i-\bar X)^2$
 
-**統計量**：$\bar X$, $S^2$のような、標本に基づいた関数を統計量といい。その確率分布を標本分布という。
+**統計量**： 標本平均や標本分散といった標本確率変数の関数として定義される確率変数を一般に統計量という。
 
 統計量の確率分布を標本分布といい。
 
@@ -46,8 +46,6 @@ $\bar X$の平均と分散は計算できるが、その確率分布を求める
 $E[\bar X]=\mu$
 
 $Var[\bar X]=\frac{\sigma^2}{n}$
-
-
 
 
 となる。
@@ -71,8 +69,6 @@ $E[S^2]={(n-1)/n}\sigma^2$
 
 
 ## 正規母集団からの代表的な標本分布
-
-
 
 定理：
 
