--- a/docs/02_確率分布と期待値.markdown
+++ b/docs/02_確率分布と期待値.markdown
@@ -1,12 +1,21 @@
 
 
+統計検定を受ける機会で、確率論と統計学を勉強しました。勉強のときの要点と経験をまとめます。
+
+基本的に、以下のフレームワークに従って紹介します：
+
+概念（What）　→　背景（Why）　→　応用（How）
+
+内容が多いため、複数の分けて書きます。本文は確率論の基礎概念をまとめます。この基礎概念は、後ほどの記事で繰り返し使ってるから、非常に重要だと思います。
+
+
 ## 定義と定理
 
-**試行**：不確からしさを伴う実験
+**試行**：不確からしさを伴う実験。
 
-**全事象、標本空間、$\Omega$**：試行によって起こりうるすべての結果。集合として捉える。例えば、1回サイコロを投げることの点数なら、$\Omega={1,2,3,4,5,6}$
+**全事象、標本空間、$\Omega$**：試行によって起こりうるすべての結果。集合として捉える。例えば、1回サイコロを投げることのÂ点数なら、$\Omega={1,2,3,4,5,6}$
 
-**事象**：起こりうる結果の集まり。事象も集合として捉える。例えば、1回サイコロを投げることの点数なら、点は奇数の事象は {1,3,5}。
+**事象**：起こりうる結果の集まり。事象も集合として捉える。例えば、1回サイコロを投げることの点数なら、点は奇数の事象は ${1,3,5}$。
 
 **集合族**：事項の集合、すなわち $\Omega$ の部分集合からなる集合を集合族という。（事項は集合だから、集合族は集合の集合）
 
@@ -32,7 +41,7 @@
 
  確率（累積）分布関数になるための必要十分条件:
 
-- (1) $lim_{-\infty}F(x)=0,lim_{\infty}F(x)=1$
+- (1) $\lim_{-\infty}F(x)=0, \lim_{\infty}F(x)=1$
 - (2) F(x)はxの非減少関数である
 - (3) F(x)は右連続関数である
 
